PLC + POL fixes:
-Fixed POL foci giving wrong party support
-Re-introduced PLC language events
-Made PLC faction choices more clear
-Fixed PLC nationalist event chains
-Made nationalist uprisings more of a problem
-Localization fixes

--- a/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
+++ b/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
@@ -97,7 +97,7 @@ PLC_build_warsaw_palace:0 "The Palace at Warsaw"
 PLC_sejm_dominance:0 "Dominate the Sejm"
 PLC_mendog_iii:0 "The Reign of Mindaugas III of Urach"
 PLC_lithuanian_lead:0 "Lithuanian Leadership"
-PLC_polish_language:0 "Polish as the Official Language"
+PLC_polish_language:0 "The Polish Popular Majority"
 PLC_minority_rights:0 "Minority Guarantees"
 PLC_decentralization:0 "Decentralisation"
 PLC_centralizing_power:0 "Centralising Power"
@@ -254,12 +254,12 @@ plcommon.4.t:0 "Language question"
 plcommon.4.d:0 "Our policy on the official language of the Commonwealth has to be formed. While varying areas speak Polish or Lithuanian, we need to decide the working language of our government. Polish is the obvious choice, as the majority of our nation speaks it, but bilingualism would satisfy the Lithuanian minority who are afraid of Polish domination. What should we do?"
 plcommon.4.a:0 "The government will be bilingual!"
 plcommon.4.b:0 "Use only Polish for the government"
-plcommon.5.t:0 "Dmowski's Speech"
-plcommon.5.d:0 "Roman Dmowski, leader of Polish National-Radical Party, recently said that the status of bilingualism is an abomination for Poles. He has encouraged people to destroy all signs with this 'peasant dialect' on them."
-plcommon.5.a:0 "He doesn't matter anymore"
-plcommon.6.t:0 "Voldemaras's speech"
-plcommon.6.d:0 "Augustinas Voldemaras, leader of the Lithuanian nationalists, has declared that the usage of only Polish in the government is treachery against the Lithuanian nation."
-plcommon.6.a:0 "He doesn't matter anymore"
+plcommon.5.t:0 "Dmowski's Nationalists"
+plcommon.5.d:0 "Roman Dmowski, leader of Polish National-Radical Party, has recently come into the spotlight for his increasingly nationalist and pro-Polish views. His most recent populist speech on the "Lithuanian favouratism" pervading the government has gained traction among Commonwealth citizens, and Dmowski himself is quickly gaining supporters. If we continue to support Lithuanian interests in the government, this may be a sign of things to come."
+plcommon.5.a:0 "He's barely worth noticing."
+plcommon.6.t:0 "Voldemaras' Nationalists"
+plcommon.6.d:0 "Augustinas Voldemaras, leader of the Lithuanian nationalists, has recently come into the spotlight for his increasingly nationalist and pro-Lithuanian views. His most recent populist speech on the "Polish scourge" pervading the government has gained traction among Commonwealth citizens, and Voldemaras himself is quickly gaining supporters. If we continue to support Polish interests in the government, this may be a sign of things to come."
+plcommon.6.a:0 "He's barely worth noticing."
 plcommon.7.t:0 "National Armed Forces"
 plcommon.7.d:0 "Roman Dmowski said that the National-Radical Party, a paramilitary organisation created a few months ago, has to begun to fight against the 'government under Jewish and Lithuanian peasant influence, which threatens the Polish nation.' The number of his supporters is growing very fast."
 plcommon.7.a:0 "Smash those rebels"
@@ -271,7 +271,7 @@ plcommon.9.d:0 "After Dmowski's death, Adam Doboszynski took leadership of the N
 plcommon.9.a:0 "We cannot oppose them, Doboszynski is the new prime minister"
 plcommon.9.b:0 "Crush them!"
 plcommon.10.t:0 "Doboszynski's coup!"
-plcommon.10.d:0 "After our refusal to their demands, the Polish nationalists have made an attempt to take power into their hands. Only our armed forces can save us now...."
+plcommon.10.d:0 "After giving in to their initial demands, the Polish Nationalists have made an attempt to take power into their hands. There is violence in the streets of the capital as nationalist rebels attempt to size control of key government buildings. Only our armed forces can save us now...."
 plcommon.10.a:0 "Doboszynski's coup was a success!"
 plcommon.10.b:0 "The armed forces crushed this rebellion!"
 plcommon.11.t:0 "New Government"
@@ -405,10 +405,10 @@ plcommon.40.t:0 "Anniversary of the Lublin Union"
 plcommon.40.d:0 "Today we celebrate the anniversary of the signature of the Lublin Union, which, for the first time in history, created a united Polish-Lithuanian state."
 plcommon.40.a:0 "Commonwealth is Eternal"
 plcommon.41.t:0 "Lithuania Rebels!"
-plcommon.41.d:0 "After our increasingly anti-Lithuanian policies led to the effective dissolution of the Commonwealth, the Lithuanians have been fuming under the Polish bootheel. Today, the Lithuanian government, rallying around nationalist Augustinas Voldemaras, have declared that they will no longer be a part of antion dominated by Polish oppressors, and have declared their total independence!"
+plcommon.41.d:0 "After our increasingly anti-Lithuanian policies led to the effective dissolution of the Commonwealth, the Lithuanians have been fuming under the Polish bootheel. Today, the Lithuanian government, rallying around nationalist Augustinas Voldemaras, have declared that they will no longer be a part of a nation dominated by Polish oppressors, and have declared their total independence!"
 plcommon.41.a:0 "They will die for this!"
 plcommon.42.t:0 "Poland Rebels!"
-plcommon.42.d:0 "After our increasingly anti-Polish policies led to the effective dissolution of the Commonwealth, the Poles have been fuming under the Lithuanian bootheel. Today, the Polish government, rallying around nationalist Roman Dmowski, have declared that they will no longer be a part of antion dominated by Lithuanian oppressors, and have declared their total independence!"
+plcommon.42.d:0 "After our increasingly anti-Polish policies led to the effective dissolution of the Commonwealth, the Poles have been fuming under the Lithuanian bootheel. Today, the Polish government, rallying around nationalist Roman Dmowski, have declared that they will no longer be a part of a nation dominated by Lithuanian oppressors, and have declared their total independence!"
 plcommon.42.a:0 "They will die for this!"
 plcommon.43.t:0 "Voldemaras' Army"
 plcommon.43.d:0 "Today in the Lithuanian city of Siauliai, the LTIP held a large rally in the name of Lithuanian primacy. The party's leader, Augustinas Voldemaras, preached to cheering crounds that "their worst nightmares had come true", and that "Polish rats were spreading themselves through the government like a plague". He pointed to recent governmental policies that clearly favoured Polish interests over Lithuanian ones, and found his speech received with thunderous applause. After the end of the rally, rumors have spread of the LTIP forming small militias in the name of "Protecting the Lithuanian people"."
@@ -421,7 +421,7 @@ plcommon.45.d:0 "The citizens of the Commonwealth's capital awoke otday to a sur
 plcommon.45.a:0 "We must give in."
 plcommon.45.b:0 "Never!"
 plcommon.46.t:0 "Voldemaras' Coup"
-plcommon.46.d:0 "After our refusal to their demands, the Lithuanian Nationalists have made an attempt to take power into their hands. Only our armed forces can save us now...."
+plcommon.46.d:0 "After giving in to their initial demands, the Lithuanian Nationalists have made an attempt to take power into their hands. There is violence in the streets of the capital as nationalist rebels attempt to size control of key government buildings. Only our armed forces can save us now...."
 plcommon.46.a:0 "The coup succeeds."
 plcommon.46.b:0 "Hold them back!"
 plcommon.47.t:0 "Lithuanian Nationalists Seize the Commonwealth!"
@@ -504,6 +504,21 @@ plcommon.68.a:0 "Unfortunate."
 plcommon.69.t:0 "The Commonwealth Comes Together"
 plcommon.69.d:0 "With the decree of Mendog III that the kingdoms of both Poland and Lithuania shall be united as one nation, the peoples of both states have found themselves with an uncertain future. The two nations have not been together in union for over a century, and the Commonwealth's new government is in its infancy. \n\nLithuanians are already voicing concerns that the more plentiful Polish will seize effective control of the nation, and many Poles feel that a Lithuanian king will treat them as second-class citizens in favor of his own people. Tensions have been increasing across the nation, and both Populist and Syndicalist movements feed off of the distrust pervading the kingdom. \n\nIt remains to be seen if this new nation can hold itself together in the face of the coming storms..."
 plcommon.69.a:0 "We will stand united!"
+plcommon.70.t:0 "Dmowski's Speech"
+plcommon.70.d:0 "Roman Dmowski, leader of Polish National-Radical Party, recently said that the status of bilingualism is an abomination for Poles. He has encouraged people to destroy all signs with this 'peasant dialect' on them."
+plcommon.70.a:0 "He doesn't matter anymore."
+plcommon.71.t:0 "Voldemaras' Speech"
+plcommon.71.d:0 "Augustinas Voldemaras, leader of the Lithuanian nationalists, has declared that the usage of only Polish in the government is treachery against the Lithuanian nation."
+plcommon.71.a:0 "He doesn't matter anymore."
+plcommon.72.t:0 "Lithuania Rebels!"
+plcommon.72.d:0 "After the failed coup attempt in the capital, the Lithuanian Nationalists have been fuming under the Polish bootheel. Today, the Lithuanian government, rallying around nationalist Augustinas Voldemaras, have declared that they will no longer be a part of a nation dominated by Polish oppressors, and have declared their total independence!"
+plcommon.72.a:0 "They will die for this!"
+plcommon.73.t:0 "Poland Rebels!"
+plcommon.73.d:0 "After the failed coup attempt in the capital, the Polish Nationalists have been fuming under the Lithuanian bootheel. Today, the Polish government, rallying around nationalist Roman Dmowski, have declared that they will no longer be a part of a nation dominated by Lithuanian oppressors, and have declared their total independence!"
+plcommon.73.a:0 "They will die for this!"
+plcommon.74.t:0 "Revenge on the Commonwealth"
+plcommon.74.d:0 "It is time to strike back at the oppressive "Commonwealth", and erase them from the map once and for all!"
+plcommon.74.a:0 "Revenge!"
 
 ### Parties ###
 PLC_totalist_party:0 "Free Worker's Party"
@@ -528,8 +543,8 @@ PLC_national_populist_party:0 "National-Radical Party"
 PLC_national_populist_party_long:0 "The National-Radical Party"
 
 ### Flags ###
-plc_polish_favor:0 "§RThis option will favour Poland in the makeup of the Commonwealth.§! \n"
-plc_lithuanian_favor:0 "§RThis option will favour Lithuania in the makeup of the Commonwealth.§! \n"
+plc_polish_favor:0 "§RThis option will favour Poland in the makeup of the Commonwealth. This will have consequences.§! \n"
+plc_lithuanian_favor:0 "§RThis option will favour Lithuania in the makeup of the Commonwealth. This will have consequences.§! \n"
 PLC_russian_forts_tooltip:0 "will gain a large fortification on the Russian border.\n"
 PLC_holding_our_gains_tooltip:0 "will gains city-wide fortifications. \n"
 PLC_coastal_forts_tooltip:0 "will receive extensive coastal fortifications. \n"
@@ -538,4 +553,4 @@ PLC_chose_germany:0 "The Commonwealth remains in Mitteleuropa"
 PLC_chose_alone:0 "The Commonwealth leaves Mitteleuropa"
 PLC_chose_syndicalist:0 "The Commonwealth has Embraced Syndicalism"
 PLC_capital_bunker:0 "will receive fortifications in the capital.\n"
-PLC_select_capital:0 "A New Capital must first be selected.\n"
+PLC_select_capital:0 "A New Capital must first be selected before it can be improved.\n"
