--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -95,7 +95,7 @@ worldnews.14.e:0 "The Brusilov Offensive succeeding? Perhaps. But the Black Hund
 worldnews.15.t:0 "Assassination of President Kerensky"
 worldnews.15.d:0 "Kerensky has just been shot and killed while on the way to the Senate! The assailant was taken down by the police, but the goals and intentions of the attacker are unknown. Despite his massive unpopularity among the Russian people due to botched land reform and ineffective rule, Kerensky was nevertheless able to hold the country together for years, and his death has thrown Russia into chaos. The Senators are already discussing a possible replacement to Kerensky, new coalitions are being formed, both between the left and the right, while military men like Denikin, Wrangel and Kornilov are just one step away from intervening to dissolve democracy and 'save Mother Russia'."
 worldnews.15.a:0 "Let us hope Democracy survives in Russia."
-worldnews.15.b:0 "It is high time for the Russian Republic to end."
+worldnews.15.b:0 "The Liberal Russian Republic will reform or perish."
 worldnews.15.c:0 "An opportunity arises for the Bolsheviks. Now, where in the world is Trotsky?"
 worldnews.15.e:0 "Kerensky was a terrible President, but his death is no good news."
 worldnews.15.f:0 "Russia isn't watching anymore! We could make a move."
