Germany can now tell PLC to rejoin Mitteleuropa or die if they try to leave.

--- a/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
+++ b/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
@@ -435,7 +435,7 @@ plcommon.49.t:0 "New Government"
 plcommon.49.d:0 "The LTIP Party took power in the Commonwealth and has restored Lithuania."
 plcommon.49.a:0 "Okay."
 plcommon.50.t:0 "The Mitteleuropa Question"
-plcommon.50.d:0 "With the formation of the new Polish-Lithuanian Commonwealth, our political status in the Mitteleuropa alliance is unclear. While Lithuania was a member of the alliance, Poland was not, and with the combination of our two governments, it seems that there is an opportunity to use Poland's status as a member outside of the alliance to leverage our way out, if we so choose. What should we do?"
+plcommon.50.d:0 "With the formation of the new Polish-Lithuanian Commonwealth, our political status in the Mitteleuropa alliance is unclear. While Lithuania was a member of the alliance, Poland was not, and with the combination of our two governments, it seems that there is an opportunity to use Poland's status as a member outside of the alliance to leverage our way out, if we so choose. \n\nHowever, Germany is sure to see an attempt to leave as a threat to their European hegemony, and may take action against us. What should we do?"
 plcommon.50.a:0 "We still need German protection."
 plcommon.50.b:0 "We have outgrown this decaying alliance."
 plcommon.51.t:0 "The PLC Joins the Fourth International?"
@@ -519,6 +519,21 @@ plcommon.73.a:0 "They will die for this!"
 plcommon.74.t:0 "Revenge on the Commonwealth"
 plcommon.74.d:0 "It is time to strike back at the oppressive "Commonwealth", and erase them from the map once and for all!"
 plcommon.74.a:0 "Revenge!"
+plcommon.75.t:0 "The Polish-Lithuanian Commonwealth leaves Mitteleuropa!"
+plcommon.75.d:0 "Declaring that Poland's status outside of the Mitteleuropa Alliance has transferred to the new Commonwealth, the mutionous state of the Polish-Lithuanian Commonwealth is attempting to weasel their way out of Mitteleuropa! This is an obvious spit in the face of German hegemony in Europe, and if we don't act now, other states in the alliance may take notice..."
+plcommon.75.a:0 "Let them leave."
+plcommon.75.b:0 "They return or we will MAKE them return!"
+plcommon.76.t:0 "Germany Says "NO"!"
+plcommon.76.d:0 "The German ambassador to the Commonwealth today quietly delivered a sternly worded letter to Mendog III himself. The letter written to the king himself was short and simple: any attempt to leave the Mitteleuropa alliance will be seen as nothing less than an attack on Germany herself. With this alarmingly short note in hand, the upper echelons of the Commonwealth government have been in talks on how to respond. \n\nIt seems likely that Germany is bluffing, but is it worth taking the risk?"
+plcommon.76.a:0 "The risk is too great, we must surrender."
+plcommon.76.b:0 "We shall call their obvious bluff!"
+plcommon.77.t:0 "The PLC Remains Defiant!"
+plcommon.77.d:0 "Despite our ambassador delivering our demands to no less than King Mendog himself, the Commonwealth has remained suspiciously silent with regards to our demands to return to the alliance. This is obviously an affront to no less than the Kaiser himself, and the Commonwealth seems intent on their own suicide. How should we respond?"
+plcommon.77.a:0 "Put them down."
+plcommon.77.b:0 "They called our bluff..."
+plcommon.78.t:0 "The PLC Backs Down"
+plcommon.78.d:0 "After the Polish-Lithuanian Commonwealth so proudly declared their intention to leave the Mitteleuropa alliance, they have given in to our demands, and reversed their decision. The Commonwealth government quietly released a missive today stating the previous declaration was "a clerical mistake" and the idea that the Commonwealth would leave Mitteleuropa "simply untrue"."
+plcommon.78.a:0 "They learned their place."
 
 ### Parties ###
 PLC_totalist_party:0 "Free Worker's Party"
