--- a/localisation/KR_Commune_of_France_l_english.yml
+++ b/localisation/KR_Commune_of_France_l_english.yml
@@ -54,7 +54,7 @@ FRA_communard_spirit:0 "Communard Spirit"
 FRA_communard_spirit_desc:0 "We are the legacy of the Paris Commune, the first socialist state ever created, and brutally repressed by the Republican reactionaries. In 1920, the workers finally got their revenge and overthrew the military junta of the 'Party of Order'. We, sons and daughters of Communards must protect our state and our spirit, we will not be commanded by tyrants anymore!"
 
 FRA_bad_intel:0 "Inefficient Intelligence"
-FRA_bad_intel_desc:0 "Ever since the Party of Order tried to stiffle the worker's uprising in France, the idea of a centralised intelligence service is seen by many as a hallmark of the reactionary oppression of the post-Weltkrieg social movements. As a result, the Commune's intelligence services are limited to extremely scrutinised intelligence committees to prevent a repeat of this situation."
+FRA_bad_intel_desc:0 "Ever since the Party of Order tried to stifle the worker's uprising in France, the idea of a centralised intelligence service is seen by many as a hallmark of the reactionary oppression of the post-Weltkrieg social movements. As a result, the Commune's intelligence services are limited to extremely scrutinised intelligence committees to prevent a repeat of this situation."
 
 #The three following ideas are extremely weird. Are they intended ? Especially the third. Travailleurs and Sorelians both share it... I'm picking Travailleurs for now
 FRA_economic_reforms_anar:0 "Economic Reforms"
@@ -70,7 +70,7 @@ FRA_military_buildup_two_idea:0 "Calibrated Economy"
 FRA_military_buildup_two_idea_desc:0 "As the world slowly approaches war again, we can rapidly capitalise on our healthy economy to rapidly switch parts of our economy to focus on military build-up. More factories are dedicated on arming our soldiers and building military structures, without any severe impact on our population."
 
 FRA_ruralism_idea:0 "Ruralism"
-FRA_ruralism_idea_desc:0 "The wide-reaching reforms to our industry and economy means than we no longer have massive industrial centers surrounding populous cities. This incidently makes any attempt by enemy forces to cripple or even destroy our economy that much harder, with the biggest rural industrial centers far smaller and far more numerous than the great industry centers of Europe."
+FRA_ruralism_idea_desc:0 "The wide-reaching reforms to our industry and economy means than we no longer have massive industrial centres surrounding populous cities. This incidentally makes any attempt by enemy forces to cripple or even destroy our economy that much harder, with the biggest rural industrial centres far smaller and far more numerous than the great industry centres of Europe."
 
 FRA_market_socialism_idea:0 "Market Socialism"
 FRA_market_socialism_idea_desc:0 "Market Socialism is far more than a socialist interpretation of a market economy. By putting all the new worker cooperatives in a fair and equal competitive economy, we can make our civilian economy more dynamic and more efficient without having to directly intervene or go through slow, bloated unions in most cases."
@@ -94,7 +94,7 @@ FRA_industralization_idea:0 "Communal Industrialisation"
 FRA_industralization_idea_desc:0 "Proned by Jacobin economy minister Jean Jérôme, Industrialisation is no strange concept to anyone in the Commune or abroad. This policy aims to rapidly increase the industrial capacity of France in order to catch up to our arch nemesis Germany. This is accompanied by a work culture and the creation of dedicated factory towns."
 
 FRA_mass_fire_support_idea:0 "Mass Fire Support"
-FRA_mass_fire_support_idea_desc:0 "Every man has his rifle and grenade, every squad has its machine gun. By organizing our divisions to provide fire to eachother, we can another a new layer of fire support. Every time a division advances, all the other divisions suppress the enemy. By doing this in waves, we can rapidly gain ground. Now to supply the equipment needed."
+FRA_mass_fire_support_idea_desc:0 "Every man has his rifle and grenade, every squad has its machine gun. By organising our divisions to provide fire to each other, we can another a new layer of fire support. Every time a division advances, all the other divisions suppress the enemy. By doing this in waves, we can rapidly gain ground. Now to supply the equipment needed."
 
 FRA_mass_conscription_idea:0 "Mass Conscription"
 FRA_mass_conscription_idea_desc:0 "Whereas our enemies have trouble enlisting enough soldiers to fight their reactionary and imperialist wars, every man is ready to fight for the Commune. Let us mobilise as many as our economy can sustain, we will overwhelm the reactionaries with our ultimate dedication to the Commune."
@@ -106,10 +106,10 @@ FRA_military_academy_idea:0 "Military Academy"
 FRA_military_academy_idea_desc:0 "We have to face the harsh reality that the Weltkrieg led to the downfall of most of our prestigious, if reactionary, military academies. While some claim this to be an acceptable status quo, we know better. Let us invest in new military academies to train skilled officers, for the future of the Communal Army."
 
 FRA_centralized_hc_idea:0 "Centralised High Command"
-FRA_centralized_hc_idea_desc:0 "The new Communal Army was not built like the old French army, many Communards resenting the military administration that tried to stiffle the Commune, but we cannot leave our Officer Corps shattered. Let us centralise our High Command again, to better organise things some people like to forget, like logistics."
+FRA_centralized_hc_idea_desc:0 "The new Communal Army was not built like the old French army, many Communards resenting the military administration that tried to stifle the Commune, but we cannot leave our Officer Corps shattered. Let us centralise our High Command again, to better organise things some people like to forget, like logistics."
 
 FRA_tank_quality_line_idea:0 "Quality Tank Production"
-FRA_tank_quality_line_idea_desc:0 "What good is a tank if it doesn't perform as well as enemy tanks? We should not sacrifice on quality in favor of quantity, all this will lead to is more burning husks on the battlefield. Quality tanks, even if fewer in numbers, will take many times their numbers, making them a safe return on investment."
+FRA_tank_quality_line_idea_desc:0 "What good is a tank if it doesn't perform as well as enemy tanks? We should not sacrifice on quality in favour of quantity, all this will lead to is more burning husks on the battlefield. Quality tanks, even if fewer in numbers, will take many times their numbers, making them a safe return on investment."
 
 FRA_tank_assembly_line_idea:0 "Tank Assembly Line"
 FRA_tank_assembly_line_idea_desc:0 "What good is a tank if the enemies have many more to throw against us? We cannot let perfectionists sabotage our assembly lines for minimal gains, or else we will be outnumbered. Quantity will allow us to overwhelm our enemies with entire divisions of cold hard steel, and many more shells flying at them."
@@ -136,13 +136,13 @@ FRA_army_mutiny:0 "Army Mutiny"
 FRA_army_mutiny_desc:0 "The failure of the coup attempt by Gamelin has thrown the entire army into total disarray. Soldiers keep an eye behind their back even on the squad level, and purges are being operated to ensure no more Syndicalists wield any power in the army. This makes our army a total mess for the time being."
 
 FRA_amenagement_idea:0 "Aménagement of the Territory"
-FRA_amenagement_idea_desc:0 "France has historically been a very centralised country, meaning that most of the development has been limited to industrial cities and population centers. We have funded large projects to ensure that all parts of our territory are developed to a satisfactory manner."
+FRA_amenagement_idea_desc:0 "France has historically been a very centralised country, meaning that most of the development has been limited to industrial cities and population centres. We have funded large projects to ensure that all parts of our territory are developed to a satisfactory manner."
 
 FRA_plan_prost_idea:0 "Plan Prost"
 FRA_plan_prost_idea:0 "Henri Prost's plans for highways linking the Paris suburbs has proved to be popular across the country. Many other municipalities like Lyon or Marseille have also signed up to the plan, and projects are already being drawn for a large highway network linking all of France's major cities together, from Lille to Toulouse."
 
 FRA_paramilitary_gendarmes:0 "Paramilitary Gendarmes"
-FRA_paramilitary_gendarmes_desc:0 "The Gendarmes are a fine organisation, a paramilitary police force capable of both civilian and military activities. While many have pushed to completely disband them, we will instead expand their activities to make them a parralel force to the French Communal Police."
+FRA_paramilitary_gendarmes_desc:0 "The Gendarmes are a fine organisation, a paramilitary police force capable of both civilian and military activities. While many have pushed to completely disband them, we will instead expand their activities to make them a parallel force to the French Communal Police."
 
 FRA_secret_police:0 "Secret Police"
 FRA_secret_police_desc:0 "There are still many enemies of the Commune inside the Commune, sometimes even inside positions of power or within the military. This push for transparency is dangerous, we must instead organise secret police operations to ensure the safety of the French people from internal influences."
@@ -151,10 +151,10 @@ FRA_demo_surete:0 "Sûreté Populaire Démocratique"
 FRA_demo_surete_desc:0 "We cannot allow paranoia to lead to the destruction of the fine balance we achieved with the Sûreté Populaire. By democratising the organisation, we will ensure that the French respect the Police not by fear but by an understanding of their actions and goals, and by knowing that they serve them first and foremost."
 
 FRA_hawkish_renseignements:0 "Revolutionary Renseignements"
-FRA_hawkish_renseignements_desc:0 "The Renseignements Généraux must ensure our safety from reactionary enemies abroad. Simple counter-espionage is not adequate, we must be ready to spy on enemy countries and support Syndicalist movements across the world. A good offense is the best defense."
+FRA_hawkish_renseignements_desc:0 "The Renseignements Généraux must ensure our safety from reactionary enemies abroad. Simple counter-espionage is not adequate, we must be ready to spy on enemy countries and support Syndicalist movements across the world. A good offence is the best defence."
 
 FRA_peace_renseignements:0 "Protective Renseignements"
-FRA_peace_renseignements_desc:0 "The Renseignements Généraux must ensure the safety of our country above all else. Counter-espionage is the centrepiece of an effective national defense, and there are many enemies that wait for a moment of weakness to influence and rile up our population."
+FRA_peace_renseignements_desc:0 "The Renseignements Généraux must ensure the safety of our country above all else. Counter-espionage is the centrepiece of an effective national defence, and there are many enemies that wait for a moment of weakness to influence and rile up our population."
 
 FRA_peaceful_revolution_idea:0 "Peaceful Revolution"
 FRA_peaceful_revolution_idea_desc:0 "The International Syndicalist Revolution will come, but it will be civilised. With the main reactionary powers in Europe finally shattered and their workers liberated, we aim to encourage further uprisings by merely proving the superiority of Syndicalism to the whole world."
@@ -172,7 +172,7 @@ FRA_colonnes_neptune_idea:0 "The Colonnes de Neptune"
 FRA_colonnes_neptune_idea_desc:0 "Our Marine forces will be the final piece to our naval reach. Once the enemy's coasts are ours, we will send our Marines forth, where they will support the invasion of our regular troops with beachheads. Let us train and galvanise them to become the pride of the Communal Navy!"
 
 FRA_cut_off_capitalists_idea:0 "Cut off the Capitalists"
-FRA_cut_off_capitalists_idea_desc:0 "The capitalists still pride themsleves of their colonial territories. The fruit of their plunders still flow freely across the high seas. But if we have a say about it, we will ensure the stolen properties of the African, Asian and American workers will not enrich them."
+FRA_cut_off_capitalists_idea_desc:0 "The capitalists still pride themselves of their colonial territories. The fruit of their plunders still flow freely across the high seas. But if we have a say about it, we will ensure the stolen properties of the African, Asian and American workers will not enrich them."
 
 French_revanchism:0 "French Revanchism"
 French_revanchism_desc:0 "We have long prepared ourselves for this inevitable war. We have long cast away Pétain and his creed, but this does not mean we will forget what our brothers died for in the Ardennes, in Verdun, in the Chemin des Dames. We will avenge them, and once and for all regain what we deserved for our struggle."
@@ -362,7 +362,7 @@ FRA_Demand_Alsace_Lorraine_desc:0 "The French people shall wait no longer! Time 
 FRA_war_with_spain: "Liberate Spain"
 FRA_war_with_spain_desc:0 "Right at our southern border lays the reactionary state of Spain, our brothers from the CNT didn't succeed in their attempt to liberate the country but we will."
 FRA_War_with_germany:0 "Take Down Germany"
-FRA_War_with_germany_desc:0 "France´s pride must be restored and Great war undone! The Revolution shall prevail!"
+FRA_War_with_germany_desc:0 "France's pride must be restored and Great war undone! The Revolution shall prevail!"
 FRA_War_with_austria:0 "Free the Peoples of Austria-Hungary"
 FRA_War_with_austria_desc:0 "The Austrian peoples have proven their incapability to commence a successful socialist revolution in their country and to liberate themselves from the Habsburg tyranny. We can, however, help them with that."
 FRA_War_with_austria_tooltip:0 "Control or have a puppet or an ally control either §YVeneto§!, §YOberbayern§! or §YDeutschsüdmähren§!"
@@ -1062,7 +1062,7 @@ comfrance.164.d:0 "The First Bourges International Art Festival was held today. 
 comfrance.164.a:0 "This will be the first of many, The Government will make sure of it!"
 
 worldnews.2.t:0 "The Romand Question Resolved"
-worldnews.2.d:0 "After a demand for immediate ceding of the province of Romandie due to "Persecution of the French minority", The Swiss government decided to avoid the threat of war and accept the French demand. This is a victory for the French government, which already declares the acquisition of Romandie as another victory of the world´s working class."
+worldnews.2.d:0 "After a demand for immediate ceding of the province of Romandie due to "Persecution of the French minority", The Swiss government decided to avoid the threat of war and accept the French demand. This is a victory for the French government, which already declares the acquisition of Romandie as another victory of the world's working class."
 worldnews.2.a:0 "Syndicalism spreads"
 worldnews.2.b:0 "Horrendous!"
 worldnews.2.c:0 "The Revolution Spreads!"
