--- a/localisation/KR_Partitions_l_english.yml
+++ b/localisation/KR_Partitions_l_english.yml
@@ -396,6 +396,40 @@ part.90.t:0 "A new government"
 part.90.d:0 "We have a new government thanks to our German friends!"
 part.90.a:0 "A new beginning."
 
+part.91.t:0 "The fate of Geneva"
+part.91.d:0 "After defeating the Commune of France we have gained control over the province of Geneva. Should we give it back to its rightful owner, the Swiss Confederation?"
+part.91.a:0 "Give it back to the Swiss."
+part.91.b:0 "No, it's ours now!"
+
+part.92.t:0 "Western Flandern-Wallonia"
+part.92.d:0 "According to the Rexist-Flamish national union the final defeat and subsequent occupation of the Commune of France provides us with uniqe chance to regain our once integral part - Western Flandern-Wallonia. If we want to claim it for our state we must turn to German Empire for support."
+part.92.a:0 "Claim the Western Flandern-Wallonia!"
+part.92.b:0 "Those claims are aburd"
+
+part.93.t:0 "Flanders-Wallonia claims the western Flanders-Wallonia"
+part.93.d:0 "The government of Flanders-Wallonia has claimed region once known as the Western Flanders-Wallonia which is currently part of France. What shall be our stance towards this claim ?"
+part.93.a:0 "Support their claim"
+part.93.b:0 "Cede Western Flanders-Wallonia"
+part.93.c:0 "Who is drawing the map here!?"
+part.93.e:0 "Let the people decide!"
+
+part.94.t:0 "Germany support Flanders-Wallonia"
+part.94.d:0 "The bastards in Brussels are trying to weaken us! They have claimed the Western Flanders-Wallonia region, which rightfully belongs to France, as their own and they've gotten support from Germany in the matter, meaning we have no choice but to cede disputed territory"
+part.94.a:0 "We'll cede the territory, but only because we have no choice."
+
+part.95.t:0 "Western Flanders-Wallonia"
+part.95.d:0 "Thanks to German support we have regained provinces of the western Flanders-Wallonia."
+part.95.a:0 "Excellent!"
+
+part.96.t:0 "Plebiscite in western Flanders-Wallonia"
+part.96.d:0 "The German Empire, acting as mediator in the territorial dispute regarding western Flanders-Wallonia, has decided that a plebiscite must be held in western Flanders-Wallonia to determine its future..."
+part.96.a:0 "We shall await the results."
+
+part.97.t:0 "Plebiscite in western Flanders-Wallonia"
+part.97.d:0 "The people flocked to the polling stations and have made their decision...."
+part.97.a:0 "Western Flanders-Wallonia belongs to us!"
+part.97.b:0 "Western Flanders-Wallonia belongs to Flanders-Wallonia!"
+
 part.10.t:0 "The Fate of Britain"
 part.10.d:0 "After defeating the Union of Britain, we now control Great Britain. Many officials have called for the restoration of the United Kingdom, with its political future to be decided at a later time. The remaining minority has proposed that we consider a partition of the island. What shall we do?"
 part.10.a:0 "Let us consider a partition."
