I don't even remember what this commit contains

--- a/localisation/KR_Ottoman_l_english.yml
+++ b/localisation/KR_Ottoman_l_english.yml
@@ -23,6 +23,13 @@ cyp_cyprus1:0 "Abandoned Cyprus"
 ott_air_designs:0 "Allowed aircraft licensing"
 ott_air_designs_rejected:0 "Refused to sell licence"
 ott_naval_dominance:0 "Ottoman naval dominance"
+ott_r_caliph:0 "Caliph"
+ott_rr_caliph:0 "Recognized Ottoman Caliph"
+ott_r_opda:0 "OPDA payments halted"
+ott_defaulted:0 "Ottoman default"
+ott_r_turkic_diplo:0 "Turkic Diplomacy"
+ott_trk_gifts:0 "Exchanged gifts"
+ott_trk_tension:0 "Diplomatic tension"
 ott_gen_1:0 "Armed rebels"
 ott_gen_2:0 "Organised revolt"
 ott_gen_3:0 "Infiltrated Ottoman Army"
@@ -36,6 +43,34 @@ ott_egy_continues:0 "Egyptian aggression"
 ott_ott_continues:0 "Ottoman aggression"
 ott_german_air_designs_bonus:0 "German Air Designs"
 OTT_naval_doctrine_bonus:0 "Ottoman Naval Doctrine"
+OTT_naval_doctrine_bonus:0 "Ottoman Naval Doctrine"
+OTT_parliament_dissolved_tt:0 "§RThe parliament will be dissolved, freeing us from the burdens of political strife.§!\n"
+OTT_opposition_tt:0 "§ROpposition will be silenced for the benefit of the State.§!\n"
+OTT_constitution_tt:0 "§RStrength of new Constitution will depend on the compromise reached between the Monarch and the Parliament.§!\n"
+OTT_corruption1_tt:0 "§RThis path could deal a serious blow to corrupt groups in our Empire.§!\n"
+OTT_corruption2_tt:0 "§RSelf-serving cliques within our glorious army will be disbanded.§!\n"
+OTT_corruption3_tt:0 "§RGetting rid of shady underground organisations will allow us to rebuild our nation in peace.§!\n"
+OTT_reform_resistance_tt:0 "§ROur old-headed bureaucracy might show resistance to reforms.§!\n"
+OTT_reforms_tt:0 "§RThese reforms might put an end to our decline.§!\n"
+OTT_admin_opda_tt:0 "§RWe need a robust administrative structure to gain full control of our economy.§!\n"
+OTT_opda_focus_tt:0 "§RWe need to end the OPDA if we are to gain full control of our economy.§!\n"
+OTT_creditors_tt:0 "§ROur creditors need to agree§!\n"
+OTT_turkestan_tt:0 "§RTurkestan views us as a potential rival, and might reject our diplomatic advances.§!\n"
+OTT_NOT_IMPLEMENTED_YET:0 "§Y---THIS PATH IS NOT IMPLEMENTED YET---§!\n"
+OTT_gendarmerie_tt:0 "§RReformed Gendarmerie Corps will help us quell rebellions before they even begin.§!\n"
+camel_corpse:0 "Imperial Camel Corps"
+OTT_camel_corpse_effect:0 "Enables §HImperial Camel Corps§!\n§HCavalry\n    Desert§!\n      Attack: §G+15%§!\n      Defense: §G+5%§!\n      Movement: §G+3%§!\n\n"
+OTT_desert_tt:0 "§ROttoman Desert Corps will help us control desert areas better.§!\n"
+OTT_german_approval_tt:0 "§RThe German Empire needs to agree§!\n"
+ott_opda_flag_tt:0 "§RWe need to get rid of the OPDA before we can make investments§!\n"
+OTT_theorists_unlocked_tt:0 "\n§GTheorists unlocked§!\n"
+OTT_uzel_unlocked_tt:0 "§GUzel unlocked§!\n"
+OTT_sarsilmaz_unlocked_tt:0 "§GSarsılmaz unlocked§!\n"
+OTT_kardemir_unlocked_tt:0 "§GKarabük Demir Çelik unlocked§!\n"
+OTT_mke_unlocked_tt:0 "§GMKE unlocked§!\n"
+OTT_hurkus_unlocked_tt:0 "§GHürkuş unlocked§!\n"
+OTT_golcuk_unlocked_tt:0 "§GGölcük Dockyards unlocked§!\n"
+axis_defeated:0 "Arabian Axis Defeated"
 
 ### Ideas ###
 ott_decline:0 "Ottoman Decline"
@@ -66,6 +101,17 @@ ott_mass_production_idea:0 "Centralised Military Production"
 ott_planned_mobilization_idea:0 "Planned Mobilisation"
 ott_gendarmerie_idea:0 "Ottoman Gendarmerie"
 ott_air_warfare_academy_idea:0 "Air Warfare Academy"
+ott_arab_revolt_reforms_1:0 "Disorganized Revolt"
+ott_arab_revolt_reforms_2:0 "Disorganized Revolt"
+ott_arab_revolt_reforms_3:0 "Disorganized Revolt"
+ott_arab_revolt_reforms_4:0 "Disorganized Revolt"
+ott_arab_revolt_reforms_5:0 "Disorganized Revolt"
+ott_arab_revolt_reforms_6:0 "Disorganized Revolt"
+ott_arab_revolt_reforms_7:0 "Disorganized Revolt"
+ott_protests_idea:0 "Opposition Protests"
+ott_renewed_autocracy:0 "The New Autocracy"
+ott_compromise_constitution:0 "A Compromise Constitution"
+ott_solid_constitution:0 "Solid Constitution"
 
 ### Parties ###
 OTT_totalist_party:0 "Misak-ı Avam"
@@ -619,7 +665,7 @@ ott.81.d:0 "The German government has refused the deal! Even though we reached a
 ott.81.a:0 "We don't need their flying trashcans anyway..."
 
 ott.82.t:0 "Black Sea Naval Supremacy"
-ott.82.d:0 "'The Black Sea would storm / As it looked at the Turkish flag!' \nExpansion and modernisation of our naval bases on the Marmara and Black Sea coasts appear to have tipped the regional balance of power in our favour. As we now have a firm grip on their access to Mediterranean, other navies of the Black Sea are visibly bewildered; and the pair of 355mm Krupp guns we installed on Rumeli and Anadolu Hisarı just add insult to the injury."
+ott.82.d:0 "'The Black Sea would storm / As it looked at the Turkish flag' \n\nExpansion and modernisation of our naval bases on the Marmara and Black Sea coasts appear to have tipped the regional balance of power in our favour. As we now have a firm grip on their access to Mediterranean, other navies of the Black Sea are visibly bewildered; and the pair of 355mm Krupp guns we installed on Rumeli and Anadolu Hisarı just add insult to the injury."
 ott.82.a:0 "Give way to the flag of the Turk!"
 
 ott.83.t:0 "Eastern Mediterranean Naval Supremacy"
@@ -985,7 +1031,7 @@ ott.163.t:0 "End of the OPDA"
 ott.163.d:0 "A grand ceremony was held in Kostantiniyye today, as the prestigious public university Mekteb-i Mülkiye-i Şahane officially moved into the building once used as the Headquarters of Ottoman Public Debts Administration. After half a century of humiliation, we have finally broken free of our chains. No longer shall we pay tribute to the European states, and no longer shall we let them dictate our nation's course through history. Since the official dissolvement of OPDA, our treasury has been experiencing a remarkable influx of funds; and numerous projects await our approval."
 ott.163.a:0 "Onwards to a new future!"
 
-ott.164.t:0 "The issue of Yemen"
+ott.164.t:0 "The Issue of Yemen"
 ott.164.d:0 "Endless revolts in the Yemen Vilayet had forced the Ottoman Empire to negotiate the Treaty of Da'an (1911) with the Imam Yahya of Yemen. According to the treaty, the Zaydi Imam was given the power to appoint governors and judges in Shia-majority areas, as well as collect taxes from his followers, while remaining under Ottoman authority. The Ottomans still administered the Sunni areas and maintained a sizeable garrison force. Following the conclusion of the Weltkrieg, Yemen was isolated from the rest of the empire. The Zaydi Imam had renewed his oath of allegiance to the Ottoman Sultan, but also extended his authority over our entire Vilayet. Now that we border Yemen once again, how shall we proceed?"
 ott.164.a:0 "Demand that Yemen acknowledge the 1911 treaty"
 ott.164.b:0 "Proceed with the invasion"
