--- a/localisation/KR_Theorists_l_english.yml
+++ b/localisation/KR_Theorists_l_english.yml
@@ -73,9 +73,9 @@ yurij_gamarnik:0 "Yurij Gamarnik"
 hans_baur:0 "Hans Baur"
 
 ### Ottomans ###
-ahmed_izzet_pasha:0 "Ahmed Izzet Pasa"
-yakup_sevki_pasha:0 "Yakup Sevki Pasa"
-mustafa_kemal_pasha:0 "Mustafa Kemal Pasa"
-fahrettin_pasha:0 "Fahrettin Pasa"
+ahmed_izzet_pasha:0 "Ahmed İzzet Paşa"
+yakup_sevki_pasha:0 "Yakup Şevki Paşa"
+mustafa_kemal_pasha:0 "Mustafa Kemal Paşa"
+fahrettin_pasha:0 "Fahrettin Paşa"
 santuri_mustafa_bey:0 "Santuri Mustafa Bey"
 osman_besim_bey:0 "Osman Besim Bey"
